# Lab3_EX

./: .gitignore  CMakeLists.txt  main.cpp
SetDynamic/: CMakeLists.txt  DynSet.cpp  DynSet.h
